poke/testsuite/poke.pkl/add-arrays-diag-3.pk
/* { dg-do compile } */

defvar a = [[1,2],[3,4]] + [[5,6,7],[8,9,10]]; /* { dg-error "invalid operand\n.*" } */
